public interface Sensor {
    public String getTipo();
}
