public interface Traccion {
    public int restarPotencia();
    public int getDistanciaMaxima();
    public String getTipo();
}
