@startuml
'https://plantuml.com/class-diagram

class Robot {
    - String numeroSerie
    - int potenciaTraccionBase
    - int potenciaTraccionFinal
    - Traccion traccion

    + constructor(String numeroSerie, int potenciaTraccionBase, Traccion traccion);

    + String getNumeroSerie();
    + int getPotenciaTraccionBase();
    + int getPotenciaTraccionFinal();
    + int getDistanciaMaxima();
    + String getTipoTraccion();
    + toString();
}

interface Traccion {
    + int restarPotencia();
    + int getDistanciaMaxima();
    + int getTipo();
}

class Oruga implements Traccion {
    - SensorTemperatura mekeM0;

    + int restarPotencia();
    + int getDistanciaMaxima();
    + int getTipo();
    + getSensor();
    + String getTemperatura();
}

class RuedaDeCaucho implements Traccion {
    + int restarPotencia();
    + int getDistanciaMaxima();
    + int getTipo();
    + String getSensor();
}

interface Sensor {
    + String getTipo();
}

class SensorTemperatura implements Sensor {
    + String getTipo();
    + double getTemperatura();
}

' relaciones
Robot "1" *-- "1" Traccion : composición
Oruga "1" *-- "1" SensorTemperatura : composición

@enduml